[tool.poetry]
name = "todonepy"
version = "4.0.3"
description = "A developed command-line task manager"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
license = "GPL-3.0+"
readme = "README.rst"
homepage = "https://pypi.org/project/ToDonePy/"
repository = "https://github.com/rbpatt2019/ToDonePy"
documentation = "https://todonepy.readthedocs.io/en/latest/"
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: Unix",
        "Operating System :: MacOS :: MacOS X",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
packages = [
        { include = "helpers", from = "todonepy" },
        { include = "commands", from = "todonepy" },
        { include = "subcommands", from = "todonepy" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allow-prereleases = true}
codecov = "^2.0.15"
coverage = "^5.1"
freezegun = "^0"
isort = "^4"
mypy = "^0"
mypy-extensions = "^0.4.3"
poetry-version = "^0"
pre-commit = "^2.5.1"
pylint = "^2.5.3"
pytest = "^5.2.1"
pytest-cov = "^2.8.1"
pytest-instafail = "^0.4.1"
pytest-mypy = "^0.6.2"
pytest-runner = "^5.1"
Sphinx = "^3"
twine = "^3"
sphinx_rtd_theme = "^0"
ipython = "^7.16.1"

[tool.poetry.scripts]
to = "__init__:to"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.pylint.messages_control]
disable = """,
C,
W0611,
"""

[tool.coverage.report]
exclude_lines = [
        "if args is None:",
]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
