[tool.poetry]
name = "todonepy"
version = "4.0.3"
description = "A developed command-line task manager"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
license = "GPL-3.0+"
readme = "README.rst"
homepage = "https://pypi.org/project/ToDonePy/"
repository = "https://github.com/rbpatt2019/ToDonePy"
documentation = "https://todonepy.readthedocs.io/en/latest/"
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: Unix",
        "Operating System :: MacOS :: MacOS X",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
packages = [
        { include = "helpers", from = "todonepy" },
        { include = "commands", from = "todonepy" },
        { include = "subcommands", from = "todonepy" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b"
codecov = "^2"
coverage = "^5"
freezegun = "^0"
ipdb = "^0.13.3"
ipython = "^7"
isort = "^5"
mypy = "^0"
mypy-extensions = "^0"
poetry-version = "^0"
pre-commit = "^2"
pylint = "^2"
pytest = "^6"
pytest-cov = "^2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-sugar = "^0"
Sphinx = "^3"
sphinx_rtd_theme = "^0"
twine = "^3"

[tool.poetry.scripts]
to = "__init__:to"

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--doctest-modules
--diff-type=split
--cov=todonepy
--cov-report term"""

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.pylint.messages_control]
disable = """,
C,
W0611,
"""

[tool.coverage.report]
exclude_lines = [
        "if args is None:",
]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
        --ignore=docs
        -vv
        --instafail
        --mypy
        --mypy-ignore-missing-imports
        --doctest-modules
        --cov=todonepy/
        --cov-report term
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
